<resources>
    <string name="app_name">Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="contacts_app">Contacts App</string>
</resources>